--- a/programming/index.html
+++ b/programming/index.html
@@ -194,7 +194,12 @@ s { color: red; }
 Атомарность бывает аппаратная (когда непрерывность обеспечивается аппаратурой) и программной, когда используются специальные средства межпрограммного взаимодействия (мьютекс, семафор) . По своей сути программные средства обеспечения атомарности представляют собой два этапа - блокировка ресурса и выполнение самой операции. Блокировка представляет собой атомарную операцию, которая либо успешна, либо возвращает сообщение о занятости. 
 </div></details><hr>
     <h2>Алгоритмы</h2>
-<a href="https://docs.google.com/presentation/d/10-1h9GR7D2VmVzzg17oBug_VvHEsPtXUiKDktHW2lDw/edit?usp=sharing">Алгоритмы. Лена Волжина</a>
+<a href="https://docs.google.com/presentation/d/10-1h9GR7D2VmVzzg17oBug_VvHEsPtXUiKDktHW2lDw/edit?usp=sharing">Алгоритмы. Лена Волжина</a><br>
+<a href="https://stepik.org/217">stepik.Алгоритмы</a><br>
+<a href="https://stepik.org/1547">stepik.Структуры данных</a><br>
+<a href="https://leetcode.com/problemset/all/?difficulty=Easy">leetcode.Больше практики</a><br>
+<a href="https://alexanderskulikov.github.io/files/algorithms_href.pdf">algorithms_href.pdf</a><br>
+<a href="http://bigocheatsheet.com">Шпаргалка по O-нотации</a><br>
 </div>
 
 
