routing location hash onhashchange #

--- a/flamenco/index.html
+++ b/flamenco/index.html
@@ -22,16 +22,16 @@
 <main class="import_Data flex">
 
 <nav>
-	<a href="Alegrias">Alegrias</a>
-	<a href="Bulerias">Bulerias</a>
-	<a href="Granaina">Granaina</a>
-	<a href="Malaguena">Malaguena</a>
-	<a href="Petenera">Petenera</a>
-	<a href="Seguiriya">Seguiriya</a>
-	<a href="Solea">Solea</a>
-	<a href="Tangos">Tangos</a>
-	<a href="Tarantas">Tarantas</a>
-	<a href="Tientos">Tientos</a>
+	<a href="#Alegrias">Alegrias</a>
+	<a href="#Bulerias">Bulerias</a>
+	<a href="#Granaina">Granaina</a>
+	<a href="#Malaguena">Malaguena</a>
+	<a href="#Petenera">Petenera</a>
+	<a href="#Seguiriya">Seguiriya</a>
+	<a href="#Solea">Solea</a>
+	<a href="#Tangos">Tangos</a>
+	<a href="#Tarantas">Tarantas</a>
+	<a href="#Tientos">Tientos</a>
 </nav>
 
 <div id="links" class="img16">
