--- a/programming/angular.html
+++ b/programming/angular.html
@@ -1,4 +1,5 @@
 <div id="pageTitle">Angular</div>
+<div id="pageLogo"><a href="#angular"><img src="https://angular.io/assets/images/favicons/favicon.ico" alt="angular"></a></div>
 
   <div id="links">
     <a href="https://angular.io"><img src="https://angular.io/assets/images/favicons/favicon.ico"></a><br>
