--- a/programming/css.html
+++ b/programming/css.html
@@ -1,4 +1,5 @@
 <div id="pageTitle">CSS</div>
+<div id="pageLogo"><a href="#css"><img src="../icons/css.svg" alt="css"></a></div>
 
   <div id="links">
     <a href="https://drafts.csswg.org/"><img src="https://drafts.csswg.org/csslogo.ico" alt="csswg"></a>
