--- a/programming/expressjs.html
+++ b/programming/expressjs.html
@@ -1,4 +1,5 @@
 <div id="pageTitle">Express.js</div>
+<div id="pageLogo"><a href="#expressjs"><img src="https://expressjs.com/images/favicon.png" alt="ExpressJS"></a></div>
 
 <div id="links">
 	<a href="https://expressjs.com/">expressjs.com</a><br>
