--- a/programming/git.html
+++ b/programming/git.html
@@ -1,4 +1,6 @@
 <div id="pageTitle">Git</div>
+<div id="pageLogo"><a href="#git">
+    <img src="https://git-scm.com/favicon.ico" alt="Git"></a></div>
 
 <div>
     <h2><img src="https://git-scm.com/favicon.ico" alt="git"> Git</h2>
