--- a/programming/golang.html
+++ b/programming/golang.html
@@ -1,4 +1,6 @@
 <div id="pageTitle">Golang</div>
+<div id="pageLogo"><a href="#golang">
+    <img src="https://golang.org/favicon.ico" alt="Golang"></a></div>
 
 	<div id="links">
 		<a href="https://golang.org/">Golang.org</a><br>
