--- a/programming/html.html
+++ b/programming/html.html
@@ -1,4 +1,6 @@
 <div id="pageTitle">HTML</div>
+<div id="pageLogo"><a href="#html">
+    <img src="../icons/html.svg" alt="html5"></a></div>
 
   <div id="links">
     <a href="https://developer.mozilla.org/en-US/docs/Web/HTML"><img src="https://developer.mozilla.org/static/img/favicon32.7f3da72dcea1.png" alt="mozilla"></a>
