--- a/programming/mongodb.html
+++ b/programming/mongodb.html
@@ -1,4 +1,6 @@
 <div id="pageTitle">MongoDB</div>
+<div id="pageLogo"><a href="#mongodb">
+    <img src="https://www.mongodb.com/assets/images/global/favicon.ico" alt="MongoDB"></a></div>
 
 <div id="links">
 	<a href="https://youtu.be/CZKl22peGJk">основы MongoDB - Олег Мохов (2016)</a><br>
