--- a/programming/nodejs.html
+++ b/programming/nodejs.html
@@ -1,4 +1,6 @@
 <div id="pageTitle">Node.js</div>
+<div id="pageLogo"><a href="#nodejs">
+    <img src="https://nodejs.org/static/images/logo.svg" alt="Node.js"></a></div>
 
 <div id="links">
     <a href="https://nodejs.org/en/"><img height="70px" src="https://nodejs.org/static/images/logo.svg" alt="Node.js"></a>
