--- a/programming/php.html
+++ b/programming/php.html
@@ -1,4 +1,6 @@
 <div id="pageTitle">php</div>
+<div id="pageLogo"><a href="#php">
+    <img src="https://www.php.net/images/logos/php-med-trans.png" alt="php"></a></div>
 
 <div id="links">
   <a href="https://www.php.net/manual/ru/">php.net</a><br>
