--- a/programming/python.html
+++ b/programming/python.html
@@ -1,4 +1,6 @@
 <div id="pageTitle">Python</div>
+<div id="pageLogo"><a href="#python">
+    <img src="https://www.python.org/static/favicon.ico" alt="python"></a></div>
 
 <div id="links">
   <h2>python<a href="http://www.python.org">.org</a></h2>
