--- a/programming/rust.html
+++ b/programming/rust.html
@@ -1,4 +1,7 @@
 <div id="pageTitle">Rust</div>
+<div id="pageLogo">
+  <a href="#rust" style="filter: none"><img src="https://www.rust-lang.org/static/images/favicon-32x32.png" alt="Rust"></a>
+</div>
 
   <div id="links">
     <a href="https://www.rust-lang.org/"><img src="https://www.rust-lang.org/static/images/favicon-32x32.png" alt="Rust"> rust-lang.org</a><br>
