--- a/programming/rxjs.html
+++ b/programming/rxjs.html
@@ -1,4 +1,6 @@
 <div id="pageTitle">RxJS</div>
+<div id="pageLogo"><a href="#rxjs">
+    <img src="https://rxjs-dev.firebaseapp.com/assets/images/logos/logo.png" alt="RxJS"></a></div>
 
 <div id="links">
 	<a href="https://rxjs-dev.firebaseapp.com/">rxjs-dev.firebaseapp</a><br>
