--- a/programming/tests.html
+++ b/programming/tests.html
@@ -1,4 +1,6 @@
 <div id="pageTitle">Tests</div>
+<div id="pageLogo"><a href="#tests">
+    Tests</a></div>
 
 <div id="links">
 	<a href="https://youtu.be/24gtY5xze9g">Тесты. Часть 1 - Сергей Жигалов(2016)</a><br>
