--- a/programming/vue.html
+++ b/programming/vue.html
@@ -1,4 +1,6 @@
 <div id="pageTitle">Vue.js</div>
+<div id="pageLogo"><a href="#vue">
+    <img src="../icons/vue.svg" alt="vue"></a></div>
 
   <div id="links">
     <a href="https://vuejs.org"><img src="../icons/vue.svg" alt="vuejs.org"></a>
