--- a/programming/webpack.html
+++ b/programming/webpack.html
@@ -1,4 +1,6 @@
 <div id="pageTitle"></div>
+<div id="pageLogo"><a href="#webpack">
+    <img src="https://webpack.js.org/e0b5805d423a4ec9473ee315250968b2.svg" alt="webpack"></a></div>
 
 <div id="links">
   <a href="https://webpack.js.org"><img src="https://webpack.js.org/e0b5805d423a4ec9473ee315250968b2.svg" alt=""></a><br>
