--- a/sailing/index.html
+++ b/sailing/index.html
@@ -67,23 +67,23 @@ nav>a {
 </div>
 
 <nav>
-<a href="training_practice">Обучение и практика</a>
+<a href="#training_practice">Обучение и практика</a>
  <h2>теория</h2>
-<a href="2">2. Общие сведения о парусных судах.</a><br>
-<a href="3">3. Архитектура и устройство парусных судов.</a><br>
-<a href="4">4. Парусное вооружение яхт.</a><br>
-<a href="5">5. Теория парусного судна.</a><br>
-<a href="6">6. Теория яхты.</a><br>
-<a href="7">7. Гидрометеорология</a><br>
-<a href="8">8. Управление парусной яхтой.</a><br>
-<a href="9">9. Особые случаи при управлении парусным судном.</a><br>
-<a href="10" title="10-11 seamanship">10-11. Судовождение. Навигация и Лоция</a><br>
-<a href="12" >12. Правила безопасности плавания на яхтах</a><br>
-<a href="13" >13. Судовые работы и организация судовой службы.</a><br>
-<a href="14" >14. Такелажное дело и парусные работы</a><br>
-<a href="15" >15. Правила и Регламенты парусных соревнований</a><br>
+<a href="#2">2. Общие сведения о парусных судах.</a><br>
+<a href="#3">3. Архитектура и устройство парусных судов.</a><br>
+<a href="#4">4. Парусное вооружение яхт.</a><br>
+<a href="#5">5. Теория парусного судна.</a><br>
+<a href="#6">6. Теория яхты.</a><br>
+<a href="#7">7. Гидрометеорология</a><br>
+<a href="#8">8. Управление парусной яхтой.</a><br>
+<a href="#9">9. Особые случаи при управлении парусным судном.</a><br>
+<a href="#10" title="10-11 seamanship">10-11. Судовождение. Навигация и Лоция</a><br>
+<a href="#12" >12. Правила безопасности плавания на яхтах</a><br>
+<a href="#13" >13. Судовые работы и организация судовой службы.</a><br>
+<a href="#14" >14. Такелажное дело и парусные работы</a><br>
+<a href="#15" >15. Правила и Регламенты парусных соревнований</a><br>
 <!-- <a >16. Сигнализация и радиосвязь</a><br> -->
-<a href="law" title="sailing & law">17. Юридические аспекты яхтинга. Морское право</a><br>
+<a href="#law" title="sailing & law">17. Юридические аспекты яхтинга. Морское право</a><br>
 <!-- <a title="18 offshore safety">18. Основы выживания на море</a><br>
 <a >19. Медицинская помощь и судовая гигиена</a><br>
 <a >20. Снабжение и оборудование яхт</a><br>
@@ -93,23 +93,23 @@ nav>a {
 
 <nav>
 <h2>Парусники</h2>
-<a href="sailboats/Nau">Nau</a><br>
-<a href="sailboats/Dau">Дау / Баггала</a><br>
-<a href="sailboats/Carraca">Каррака</a><br>
-<a href="sailboats/Caravela">Каравелла</a><br>
-<a href="sailboats/Xebec">Щебека</a><br>
-<a href="sailboats/Galeon">Галеон</a><br>
-<a href="sailboats/HisWar">Исторические военные парусники</a><br>
-<a href="sailboats/HisTrade">Исторические торговые парусники</a><br>
-<a href="sailboats/HisSmallShip">Исторические малые суда</a><br>
-<a href="sailboats/Clipper">Клипер</a><br>
-<a href="sailboats/cutter">Тендер / Cutter</a><br>
-<a href="sailboats/cutter93-37">Classic Yachts 1893-1937</a><br>
-<a href="sailboats/maxi">Maxi</a><br>
-<a href="sailboats/ocean-race-70">Ocean Race Yachts 60-70ft</a><br>
-<a href="sailboats/Superyacht">Superyacht</a><br>
-<a href="sailboats/china-sail">Китайский парус</a><br>
-<a href="sailboats/grunvald" title="grunvald">格伦</a><br>
+<a href="#sailboats/Nau">Nau</a><br>
+<a href="#sailboats/Dau">Дау / Баггала</a><br>
+<a href="#sailboats/Carraca">Каррака</a><br>
+<a href="#sailboats/Caravela">Каравелла</a><br>
+<a href="#sailboats/Xebec">Щебека</a><br>
+<a href="#sailboats/Galeon">Галеон</a><br>
+<a href="#sailboats/HisWar">Исторические военные парусники</a><br>
+<a href="#sailboats/HisTrade">Исторические торговые парусники</a><br>
+<a href="#sailboats/HisSmallShip">Исторические малые суда</a><br>
+<a href="#sailboats/Clipper">Клипер</a><br>
+<a href="#sailboats/cutter">Тендер / Cutter</a><br>
+<a href="#sailboats/cutter93-37">Classic Yachts 1893-1937</a><br>
+<a href="#sailboats/maxi">Maxi</a><br>
+<a href="#sailboats/ocean-race-70">Ocean Race Yachts 60-70ft</a><br>
+<a href="#sailboats/Superyacht">Superyacht</a><br>
+<a href="#sailboats/china-sail">Китайский парус</a><br>
+<a href="#sailboats/grunvald" title="grunvald">格伦</a><br>
 </nav>
 
 <div class="import_Data">
