--- a/surf/index.html
+++ b/surf/index.html
@@ -1,6 +1,25 @@
-<div id="pageTitle">Surfing</div>
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="Description" content="">
+  <title>Surfing</title>
+  <link rel="SHORTCUT ICON" href="../icons/favicon.ico">
+  <link rel="stylesheet" href="../CSS/style.css">
+  <script src="../JS/main.js" type="module"></script>
 
-<div class="import_Data flex">
+<!--  <link rel="stylesheet" href="../CSS/lb_style.css"> -->
+  <script src="../JS/lazysizes.min.js" async></script>
+</head>
+
+<body>
+
+<header>
+  <div id="headerMenu"></div>
+</header>
+
+<main class="import_Data flex">
 
 <div>
 <a href="https://www.surfmakers-lanka.ru/blog-surf-school"> Блог школы серфинга на Шри-Ланке</a><br>
@@ -127,7 +146,7 @@
 
 </div>
 
-<table style="width: 300px !important">
+<table style="width: 300px">
   <thead>
     <tr><th width="200px">Трата</th><th width="100px">Стоимость</th></tr>
   </thead>
@@ -145,4 +164,9 @@
   <tr><td>Итого</td><td>79 826 p</td></tr>
   </tbody>
 </table>
-</div>
+
+</main>
+
+<footer></footer>
+</body>
+</html>
