--- a/guitar/index.html
+++ b/guitar/index.html
@@ -1,4 +1,29 @@
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="Description" content="">
+  <title>Guitar</title>
+  <link rel="SHORTCUT ICON" href="../icons/favicon.ico">
+  <link rel="stylesheet" href="../CSS/style.css">
+  <script src="../JS/main.js" type="module"></script>
+
+<!--   <link rel="stylesheet" href="../CSS/lb_style.css">
+   <script src="../JS/lazysizes.min.js" async=""></script> -->
+</head>
+
+<body>
+
+<header>
+  <div id="headerMenu"></div>
+</header>
+
+<main class="flex">
 <div id="pageTitle">Guitar</div>
+<div id="pageLogo">
+  <a href="#../guitar/i" title="Guitar"><img src="../icons/guitar.png" alt="guitar"></a>
+</div>
 
 <div style="width: 95vw" class="flex">
   <div id="links" class="img16">
@@ -87,3 +112,9 @@
 </div>
 
 </div>
+
+</main>
+
+<footer></footer>
+</body>
+</html>
