--- a/programming/react.html
+++ b/programming/react.html
@@ -1,4 +1,6 @@
 <div id="pageTitle">ReactJS</div>
+<div id="pageLogo"><a href="#react">
+    <img src="../icons/react.svg" alt="react"></a></div>
 
 <div id="links">
     <a href="https://reactjs.org/"><img src="../icons/react.svg" alt="reactjs.org"></a>
