--- a/programming/shablon.html
+++ b/programming/shablon.html
@@ -7,6 +7,7 @@
 	<title>Title</title>
   <link rel="SHORTCUT ICON" href="../icons/favicon.ico">
   <link rel="stylesheet" href="../CSS/style.css">
+  <link rel="manifest" href="../manifest.webmanifest">
   <script src="../JS/main.js" type="module"></script>
 
 <!--   <link rel="stylesheet" href="../CSS/lb_style.css">
