--- a/programming/index.html
+++ b/programming/index.html
@@ -154,6 +154,56 @@ s { color: red; }
 <a href="https://www.youtube.com/playlist?list=PLKaafC45L_SThr77Wm716ba3Ca-mOr-xc">Курсы по разработке интерфейсов 2016</a><br>
 </div>
 
+<div>
+    <h2>WebAssembly</h2>
+    <a href="https://vk.com/doc41637949_521818112">Никита Зимин WebAssembly (2019)</a><br>
+    <a href="https://frontendconf.ru/moscow/2019/abstracts/4782">RUST + WEBASSEMBLY (2019)</a><br>
+    <a href="https://www.vugu.org/">Vugu: A modern UI library for Go+WebAssembly</a><br>
+    Blazor <br>
+</div>
+
+<div>
+    <h2>lighthouse</h2>
+    <a href="https://github.com/aFarkas/lazysizes">lazysizes</a><br>
+    <a href="https://developer.mozilla.org/en-US/docs/Web/Progressive_web_apps">PWA</a> , TWA <br>
+    <a href="https://developer.mozilla.org/ru/docs/Web/%D0%9C%D0%B0%D0%BD%D0%B8%D1%84%D0%B5%D1%81%D1%82">manifest.webmanifest</a><br>
+    <a href="https://developer.mozilla.org/en-US/docs/Web/Progressive_web_apps/Offline_Service_workers">Service Workers</a><br>
+    <pre><code>
+//.html
+await navigator.serviceWorker.register(
+  'sw.js', updateViaCache: 'all');
+
+//sw.js
+self.addEventListener('fetch',
+  e => e.respondWith(new Response(`
+    <!doctype html>< script>
+window.parent.postMessage(await handle(location))
+    < /script>
+  `)))
+    </code></pre>
+</div>
+
+<div><a href="https://youtu.be/BX2M8t5BA3s">Machine Learning &</a><br>
+    Deep Neural Networks<br>
+    TensorflowJS<br>
+</div>
+
+<div><h2>Реактивное программирование</h2>
+    <a href="https://www.reactivemanifesto.org/ru">Манифест Реактивных Систем</a><br>
+    <a href="https://habr.com/en/post/249279/">Flux For Stupid People</a><br>
+    <a href="https://medium.com/russian/%D1%80%D1%83%D0%BA%D0%BE%D0%B2%D0%BE%D0%B4%D1%81%D1%82%D0%B2%D0%BE-%D0%BF%D0%BE-flux-%D0%B2-%D0%BA%D0%B0%D1%80%D1%82%D0%B8%D0%BD%D0%BA%D0%B0%D1%85-d59c03562ea">Руководство по Flux в картинках</a><br>
+    Redux Observable<br>
+    RxJS<br>
+    Svelte<br>
+</div>
+
+<div><h2>Квантовые вычисления</h2>
+    <a href="https://youtu.be/mtwuTHGDN-8">Квантовые вычисления: <br>новое слово в развитии ИИ</a><br>
+    Qiskit, Cirq, PennyLane <br>
+    кубит, суперпозиция, <br>
+    Сфера Блоха
+</div>
+
 <div class="img32"><h2>Status</h1>
     <ul>
         <li><a href="https://www.chromestatus.com/"><img src="https://www.chromestatus.com/static/img/chrome_logo.svg" alt="chromestatus"></a></li>
@@ -286,7 +336,7 @@ s { color: red; }
 </div>
 
 <div>
-    <h2>Terminal</h2>
+    <h2>Bash</h2>
     <pre><code>
 cd E:\Users\Projects
 cd "E:\Users\Rust Projects"
@@ -295,7 +345,7 @@ ls  // смотреть содержимое папки
 cd .. //перейти в родительский каталог
 cat fileName // view file
 sudo
-$ gzip -6 -c file.txt > file.txt.gz
+gzip -6 -c file.txt > file.txt.gz
     </code></pre>
 </div>
 
@@ -336,47 +386,6 @@ $ gzip -6 -c file.txt > file.txt.gz
 </div>
 
 <div>
-    <h2>WebAssembly</h2>
-    <a href="https://vk.com/doc41637949_521818112">Никита Зимин WebAssembly (2019)</a><br>
-    <a href="https://frontendconf.ru/moscow/2019/abstracts/4782">RUST + WEBASSEMBLY (2019)</a><br>
-</div>
-
-<div>
-    <h2>lighthouse</h2>
-    <a href="https://github.com/aFarkas/lazysizes">lazysizes</a><br>
-    <a href="https://developer.mozilla.org/en-US/docs/Web/Progressive_web_apps">PWA</a> , TWA <br>
-    <a href="https://developer.mozilla.org/ru/docs/Web/%D0%9C%D0%B0%D0%BD%D0%B8%D1%84%D0%B5%D1%81%D1%82">manifest.webmanifest</a><br>
-    <a href="https://developer.mozilla.org/en-US/docs/Web/Progressive_web_apps/Offline_Service_workers">Service Workers</a><br>
-    <pre><code>
-//.html
-await navigator.serviceWorker.register(
-  'sw.js', updateViaCache: 'all');
-
-//sw.js
-self.addEventListener('fetch',
-  e => e.respondWith(new Response(`
-    <!doctype html>< script>
-window.parent.postMessage(await handle(location))
-    < /script>
-  `)))
-    </code></pre>
-</div>
-
-<div><a href="https://youtu.be/BX2M8t5BA3s">Machine Learning &</a><br>
-    Deep Neural Networks<br>
-    TensorflowJS<br>
-</div>
-
-<div><h2>Реактивное программирование</h2>
-    <a href="https://www.reactivemanifesto.org/ru">Манифест Реактивных Систем</a><br>
-    <a href="https://habr.com/en/post/249279/">Flux For Stupid People</a><br>
-    <a href="https://medium.com/russian/%D1%80%D1%83%D0%BA%D0%BE%D0%B2%D0%BE%D0%B4%D1%81%D1%82%D0%B2%D0%BE-%D0%BF%D0%BE-flux-%D0%B2-%D0%BA%D0%B0%D1%80%D1%82%D0%B8%D0%BD%D0%BA%D0%B0%D1%85-d59c03562ea">Руководство по Flux в картинках</a><br>
-    Redux Observable<br>
-    RxJS<br>
-    Svelte<br>
-</div>
-
-<div>
   <ul>
     <li><img src="https://electronjs.org/images/favicon.ico" alt="electronjs"><a href="https://electronjs.org/">electronjs.org</a></li>
     <li><a href="https://github.com/Tencent/omi"><img src="https://tencent.github.io/omi/assets/omi-logo2019.svg" alt="omi"> omi</a></li>
@@ -400,6 +409,11 @@ window.parent.postMessage(await handle(location))
     <li>SSH</li>
     <li><a href="https://webglfundamentals.org/webgl/lessons/ru/">WebGL (3D в браузере)</a></li>
     <li>скрамы, канбаны, стендапы, парное программирование</li>
+  </ul>
+</div>
+
+<div>
+  <ul>
     <li><a href="http://progopedia.ru/">progopedia.ru</a></li>
     <li><a href="https://almanac.httparchive.org">almanac.httparchive</a></li>
     <li><a href="https://vk.com/doc41637949_513701117">code complete Стива Макконнела. 2010</a></li>
@@ -428,7 +442,7 @@ window.parent.postMessage(await handle(location))
 
 <div>
     <a href="primery/nitro/" target="_blank">Nitro</a><br>
-    <!-- <a href="primery/skillboxLanding/" target="_blank">skillboxLanding</a><br> -->
+    <a href="primery/skillboxLanding/" target="_blank">skillboxLanding</a><br>
     <a href="https://codepen.io/leonardasf1/pen/QegKyX/">video-playerJS</a><br>
     <a href="https://codepen.io/leonardasf1/pen/NWWgzmx">DNA</a><br>
     <hr>
