--- a/programming/python.html
+++ b/programming/python.html
@@ -9,6 +9,7 @@
     <li><a href="http://wombat.org.ua/AByteOfPython/">A Byte of Python</a></li>
     <li><a href="https://www.mediafire.com/file/ghynhk24dsdndj8">Грокаем Алгоритмы</a></li>
     <li>JIT (Just In Time)</li>
+    <li><a href="https://www.youtube.com/playlist?list=PLrCZzMib1e9qZwq95WVmGB-acnot5ka4a">Web-технологии. Разработка на DJANGO (осень 2016)</a></li>
     <li><a href="https://youtu.be/gjzOh5V72HM">Как программировать на Python (Skillbox)</a></li>
     <li><a href="https://youtu.be/axemRoVxkfc">Основы Python для Data Science (Skillbox)</a></li>
     <li><a href="https://www.youtube.com/watch?v=ahe3WpBMdm4&list=PLvoBekrlHDgROfUUHMbrrdsy_b2y2V_rj">Python Джедай [2016 год] По стандартам США! (Хауди Хо)</a></li>
@@ -21,7 +22,6 @@
     <li><a href="https://habr.com/ru/post/320360/">flask</a></li>
     <li><a href="https://2.python-requests.org/en/master/">requests</a></li>
     <li><a href="https://twistedmatrix.com/trac/">twisted</a></li>
-     
   </ul>
   𝟭: Книги: <a href="https://vk.com/topic-84392011_37640354">https://vk.com/topic-84392011_37640354</a><br>
   𝟮: Проект Эйлера: <a href="http://euler.jakumo.org/">http://euler.jakumo.org/</a><br>
