--- a/zdorovie/index.html
+++ b/zdorovie/index.html
@@ -104,6 +104,7 @@
 
 <div>
   <h4> грудь, дельты, трицепс</h4>
+  <a href="https://youtu.be/E4ze_bMWbc8">Секреты идеальных грудных. Денис Гусев.</a><br>
   <a href="https://youtu.be/dT9KX4fJ-S8">Тренировка мышц груди. Денис Гусев.</a><br>
   <a href="https://youtu.be/MM4ZBCLX6TU">Тренировка дельтовидных мышц. Денис Гусев.</a><br>
   <br> · <a href="https://youtu.be/4yzmijgmDc8"></a> Это жим гантелей лёжа на наклонной скамье, детка!
