--- a/programming/angular.html
+++ b/programming/angular.html
@@ -8,6 +8,7 @@
     <a href="https://itvdn.com/ru/video/angular_cli">Angular CLI (2017)</a><br>
     <a href="https://www.youtube.com/watch?v=Jrer19KiDQg&list=PLVfMKQXDAhGW12JY3SfeDnEx7S5_tn11j"> Уроки Angular 7 (Web Developer Blog)</a><br>
     <a href="https://youtu.be/Rf54BH35yrY">Angular 8 Основы (2019)</a><br>
+    <a href="https://youtu.be/NaZwVUHnmfE">Angular 8 + RxJS. Приложение Органайзер С Нуля</a><br>
     <a href="https://youtu.be/-pb6_zRokKU">Создание приложения на Angular 4.ITVDN (2017)</a><br>
     <a href="https://youtu.be/XVzed9zlVfw">Простое приложение на Angular .Hillel (2017)</a><br>
     <a href="https://angular.io/guide/universal">Angular Universal (SSR)</a><br>
