--- a/programming/index.html
+++ b/programming/index.html
@@ -442,7 +442,7 @@ gzip -6 -c file.txt > file.txt.gz
 </div>
 
 <div>
-    <a href="primery/nitro/" target="_blank">Nitro</a><br>
+    <a href="../nitro/" target="_blank">Nitro</a><br>
     <a href="primery/skillboxLanding/" target="_blank">skillboxLanding</a><br>
     <a href="https://codepen.io/leonardasf1/pen/QegKyX/">video-playerJS</a><br>
     <a href="https://codepen.io/leonardasf1/pen/NWWgzmx">DNA</a><br>
