--- a/programming/index.html
+++ b/programming/index.html
@@ -63,6 +63,7 @@ s { color: red; }
     <span>CSS</span></a>
 </nav>
 <nav>
+<a href="#c"><span>C</span></a>
 <a href="#javascript">
     <img src="../icons/js.svg" alt="javascript">
     <span style="color: #f7df1e">JavaScript</span></a>
@@ -257,6 +258,7 @@ window.parent.postMessage(await handle(location))
 <div>
     <h2>design</h2>
     <ul>
+        <li><a href="https://materialdesignicons.com/">materialdesignicons</a></li>
         <li><a href="https://anatolykulikov.ru/review/glyphhanger-tool-to-optimize-fonts/">glyphhanger-tool-to-optimize-fonts</a></li>
         <li><a href="https://github.com/bramstein/homebrew-webfonttools">homebrew-webfonttools</a></li>
         <li>Axure - проектирование прототипа сайта/приложения</li>
@@ -344,7 +346,9 @@ cd "E:\Users\Rust Projects"
 mkdir folder  // создаем папку
 ls  // смотреть содержимое папки
 cd .. //перейти в родительский каталог
+cd ./fileName //искать в текущем каталоге
 cat fileName // view file
+mv fileName newName //rename
 sudo
 gzip -6 -c file.txt > file.txt.gz
     </code></pre>
@@ -368,6 +372,17 @@ gzip -6 -c file.txt > file.txt.gz
         <li><a href="https://www.oracle.com/technetwork/java/javase/downloads/index.html">Java Development Kit</a></li>
         <li><a href="https://habr.com/ru/company/yandex/blog/481688/">Зачем учить Java и как делать это эффективно.</a></li>
     </ul>
+    <pre><code>
+public class Home {
+    public static void main(String[] args) {
+        int x = 2;
+        String y = "text";
+        double z = 3,14;
+        System.out.print();
+        System.out.println();
+    }
+}
+    </code></pre>
 </div>
 
 <div>
