--- a/programming/index.html
+++ b/programming/index.html
@@ -351,6 +351,7 @@ cat fileName // view file
 mv fileName newName //rename
 sudo
 gzip -6 -c file.txt > file.txt.gz
+traceroute -q www.mit.edu
     </code></pre>
 </div>
 
